PivioDocument and Changeset are now generated from their schemas and annotated with spring jpa annotations