@@ -1,7 +1,5 @@
 package io.pivio.schema.annotations.custom;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import org.jsonschema2pojo.AbstractAnnotator;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -12,17 +10,17 @@ import io.pivio.schema.annotations.proxy.CustomEnumDeserializer;
 
 public class CustomJsonAnnotator extends AbstractAnnotator {
 
-  private static final Set<String> enumsToAnnotate = new HashSet<>(Arrays.asList("t-shirt-sizes"));
+  private static final Set<String> enumsToAnnotate = Set.of("t-shirt-sizes");
 
   @Override
   public void propertyField(JFieldVar field, JDefinedClass clazz, String propertyName,
       JsonNode propertyNode) {
     super.propertyField(field, clazz, propertyName, propertyNode);
-    if (enumsToAnnotate.contains(propertyName)) {
-      field.annotate(JsonDeserialize.class).param("using", CustomEnumDeserializer.class);
+    if (clazz.name().equals("PivioDocument")) {
+      if (enumsToAnnotate.contains(propertyName)) {
+        field.annotate(JsonDeserialize.class).param("using", CustomEnumDeserializer.class);
+      }
     }
-    // CustomEnumDeserializer deserializer = new CustomEnumDeserializer();
-    // deserializer.main(Arrays.asList("").toArray(new String[0]));
   }
 
 }
